<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ActiveGameActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/txtTeam1"
        app:layout_constraintStart_toStartOf="@+id/txtTeam1"
        app:layout_constraintTop_toBottomOf="@+id/txtTeam1" />

    <TextView
        android:id="@+id/txtScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/txtTeam2"
        app:layout_constraintStart_toStartOf="@+id/txtTeam2"
        app:layout_constraintTop_toBottomOf="@+id/txtTeam2" />

    <Button
        android:id="@+id/btnEditScores"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/submitScores"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edtScore2"
        app:layout_constraintStart_toStartOf="@+id/edtScore1"
        app:layout_constraintTop_toBottomOf="@+id/txtHint" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/finishGame"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtScoreboard"
        app:layout_constraintEnd_toEndOf="@+id/btnEditScores"
        app:layout_constraintStart_toStartOf="@+id/btnEditScores"
        app:layout_constraintTop_toBottomOf="@+id/btnEditScores" />

    <TextView
        android:id="@+id/txtTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/edtScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:digits="0123456789-"
        android:ems="10"
        android:hint="@string/editScore"
        android:inputType="numberSigned"
        android:textColor="@android:color/holo_green_light"
        android:textColorHint="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="@+id/txtScore1"
        app:layout_constraintStart_toStartOf="@+id/txtScore1"
        app:layout_constraintTop_toBottomOf="@+id/txtScore1" />

    <EditText
        android:id="@+id/edtScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:digits="0123456789-"
        android:ems="10"
        android:hint="@string/editScore"
        android:inputType="numberSigned"
        android:textColor="@android:color/holo_green_light"
        android:textColorHint="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="@+id/txtScore2"
        app:layout_constraintStart_toStartOf="@+id/txtScore2"
        app:layout_constraintTop_toBottomOf="@+id/txtScore2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <TextView
        android:id="@+id/txtScoreboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:fontFamily="@font/fruktur"
        android:gravity="center"
        android:text="@string/appName"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/hint"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="@+id/edtScore2"
        app:layout_constraintStart_toStartOf="@+id/edtScore1"
        app:layout_constraintTop_toBottomOf="@+id/edtScore1" />

</androidx.constraintlayout.widget.ConstraintLayout>